# iiif-static-choices

./: .dockerignore  .env.dev  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile.dev  Dockerfile.main  README.md  docker-compose.dev.yml  docker-compose.main.yml  docker-compose.yml  docker-entrypoint.sh  iiif-server-for-docker-app.py  iiif_generator.py  index.html  logging.yml  manifest_config.yml.tmpl  pyproject.toml  server.py
data/: server.py
docker-gui/: .gitignore  DEVELOPMENT.md  Dockerfile  PR_README.md  README.md  docker-entrypoint.sh  user_manual_export.md
docker-gui/web-interface/: nodemon.json  package.json  server.js
docker-gui/web-interface/public/css/: styles.css
docker-gui/web-interface/views/: help.ejs  index.ejs
helpers/images/: images.py
iiif/image/: .gitignore  image
iiif/manifest/: manifest
image/: .gitignore  ammonite-config.yml  ammonite_config.yml
manifest/: items.py  manifest.py  metadata.py  partof.py
mirador/: mirador
tiler/: iiif_image.py  image_info.py  info_json.py  tiler.py
